# TempMail

./: .dockerignore  .env.db  .env.docker  .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  Dockerfile.http  Dockerfile.single  Dockerfile.smtp  README.md  docker-compose.prod.yml  docker-compose.single.yml  docker-compose.yml  test_smtp.txt
database/: Cargo.toml
database/migrations/: 001_uuid_migration.sql  002_fix_user_config_address.sql  README.md
database/src/: clear_old_mails.rs  database.rs  lib.rs  quota.rs  webhooks.rs
http/: Cargo.toml
http/src/: main.rs  scheduler.rs  types.rs  validation.rs  validation_properties.rs  webhook.rs
smtp/: Cargo.toml
smtp/src/: errors.rs  lib.rs  main.rs  server.rs  smtp.rs  types.rs  webhook.rs
thoughts/shared/designs/: 2026-05-04-fix-email-deletion-design.md
thoughts/shared/plans/: 2026-05-04-fix-email-deletion.md
