[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deadpool-postgres = "0.14"
tokio-postgres = { workspace = true }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
rustls-native-certs = "0.8"
chrono = { workspace = true }
dotenv = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
reqwest = { workspace = true }

[dev-dependencies]
proptest = "1.4"
