[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
database = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
