[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
database = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
regex = "1.10"
tower_governor = "0.4"
tokio-cron-scheduler = "0.13"

[dev-dependencies]
proptest = "1.4"
