[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
database = {workspace = true}
regex = "1.10"
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }